ocp_resources/deployment-game-room.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: game-room
  name: game-room
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: game-room
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: game-room
        deploymentconfig: game-room
    spec:
      containers:
      - image: docker-registry.default.svc:5000/wsao/game-room
        imagePullPolicy: Always
        name: game-room
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      containerNames:
      - game-room
      from:
        kind: ImageStreamTag
        name: game-room:latest
        namespace: wsao
    type: ImageChange
  - type: ConfigChange
