ocp_resources/service-game-room-internal.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  labels:
    app: game-room
  name: game-room-internal
spec:
  ports:
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    deploymentconfig: game-room
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
