ocp_resources/service-game-room.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  labels:
    app: game-room
  name: game-room
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: game-room
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
