ocp_resources/service-wsao-datagrid-hotrod.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Hot Rod service for clustered applications.
  creationTimestamp: null
  labels:
    application: wsao-datagrid
    template: datagrid73-basic
  name: wsao-datagrid-hotrod
spec:
  ports:
  - port: 11333
    protocol: TCP
    targetPort: 11333
  selector:
    deploymentConfig: wsao-datagrid
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
