ocp_resources/service-wsao-datagrid-ping.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The JGroups ping port for clustering.
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  creationTimestamp: null
  labels:
    application: wsao-datagrid
    template: datagrid73-basic
  name: wsao-datagrid-ping
spec:
  clusterIP: None
  ports:
  - name: ping
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    deploymentConfig: wsao-datagrid
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
