ocp_resources/service-wsao-datagrid.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The web server's HTTP port.
  creationTimestamp: null
  labels:
    application: ddash-datagrid
    template: datagrid73-basic
  name: ddash-datagrid
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentConfig: ddash-datagrid
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
